--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>Established 1998</p>
     </div>
     <h1>
-      Organically Yours is a locally owned business!
+      We will remain open during the COVID-19 crisis to meet your grocery needs!
     </h1>
   </div>
 
