--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
     <h1>
       We will remain open during the COVID-19 crisis to meet your grocery needs!
+      <br>10% off groceries &amp; produce
     </h1>
   </div>
 
